2018-03-26  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSPThread.h:
	* Source/GSException.m:
	Optimise generation of stack traces to store them in a single simple
	malloced buffer and only generate an NSArray of return addresses if
	actually requested.  Also adjust output of stack trace to exclude the
	top few frames involved in generation of the trace, so we see only
	the frames of interest.

2018-03-16  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSLock.h: Expose pointer to function handling
	logging of deadlocks.
	* Source/NSLock.m: Indirect via pointer so apps can intercept the
	logging of deadlocks.
	* Source/GSHTTPURLHandle.m: Provide more detailed debug logging.
	* Source/NSURLProtocol.m: Provide more detailed debug logs.

2018-02-25  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSeq.h: Fixup error in last modification.
	* Source/GSString.m: Add method to reliably get a GSUnicodeString
	* Tests/base/NSString/test00.m: Fix tests to properly check range
	searches using all combinations of 8bit and 16bit representation
	strings.

2018-02-25  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSeq.h: Fix boundary checks searching for unicode strings.

2018-02-16  Yavor Doganov  <yavor@gnu.org>

	* Tests/base/NSNumberFormatter/basic10_4.m: Extend test expression
	to fix test failure with ICU 60.2.

2018-02-11  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/gdomap.c: Fix strncat length limits.

2018-02-09  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSTimeZone.m: fix missing fieldwidth specified in fscanf call

2018-02-09  Fred Kiefer <fredkiefer@gmx.de>

	* Source/NSXMLElement.m(-addAttribute:): Correct linear list code
	for name spaces. This fixes the last remaining Coverity issue.

2018-02-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPortCoder.h
	* Source/NSUnarchiver.h
	Improve checks for loss of data converting sizes of scalar types.

2018-02-07  Richard Frith-Macdonald <rfm@gnu.org>
